--- a/app/src/main/res/layout/nav_plants_item.xml
+++ b/app/src/main/res/layout/nav_plants_item.xml
@@ -1,14 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="bOnClick"
+            type="View.OnClickListener" />
+
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="match_parent"
     android:layout_marginEnd="@dimen/dp_12"
     android:foreground="@drawable/dr_ripple_round_24"
     android:clickable="true"
     android:layout_marginBottom="@dimen/dp_12"
     android:focusable="true"
+    android:onClick="@{bOnClick::onClick}"
 
     android:layout_height="wrap_content">
 
@@ -75,3 +86,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+</layout>
