--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,6 +19,14 @@
         <item name="chipSurfaceColor">@android:color/transparent</item>
     </style>
 
+    <style name="Widget.Jl.App.Chip.Plain" parent="Widget.Jl.App.Chip">
+        <item name="android:textColor">@color/black</item>
+        <item name="chipCornerRadius">@dimen/dp_8</item>
+        <item name="chipStrokeColor">@android:color/transparent</item>
+        <item name="chipBackgroundColor">#9FF1E7</item>
+
+    </style>
+
     <style name="Widget.Jl.App.Fab" parent="Widget.Material3.ExtendedFloatingActionButton.Primary">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
