working on recent usecase

--- a/app/src/main/res/layout/labs_main_fragment.xml
+++ b/app/src/main/res/layout/labs_main_fragment.xml
@@ -95,7 +95,14 @@
                 android:layout_marginTop="@dimen/dp_6"
                 android:onClick="@{() -> viewModel.clearPlants()}"
                 android:text="Clear" />
-
+            <Button
+                android:id="@+id/labs_main_fragment_recent_searches_btn"
+                style="@style/Widget.Jl.App.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_6"
+                android:onClick="@{() -> viewModel.addDummyRecentPlant()}"
+                android:text="Recent Searches" />
 
         </LinearLayout>
 
