--- a/app/src/main/res/layout/chip_group.xml
+++ b/app/src/main/res/layout/chip_group.xml
@@ -2,8 +2,11 @@
 <com.google.android.material.chip.Chip android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     tools:text="Asia"
-    app:chipBackgroundColor="@color/colorSurface"
-    style="@style/Widget.Jl.App.Chip.Plain"
+    app:chipMinHeight="@dimen/dp_48"
+
+    app:chipStartPadding="@dimen/dp_28"
+    app:chipEndPadding="@dimen/dp_28"
+    style="@style/Widget.Jl.App.Chip"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" />
