added to recent search

--- a/app/src/main/res/layout/plant_detail_attributes.xml
+++ b/app/src/main/res/layout/plant_detail_attributes.xml
@@ -1,101 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<merge xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <TextView
+    <data>
 
-        android:id="@+id/plant_detail_attr_scientific_name_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/dp_28"
-        android:layout_marginTop="@dimen/dp_24"
+        <import type="android.view.View" />
 
-        android:text="Scientific Name:"
-        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
-        android:textColor="?colorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plant_detail_section_region_chip_group"
-         />
+        <variable
+            name="bViewModel"
+            type="com.taru.ui.pages.detail.PlantDetailViewModel" />
+    </data>
 
-    <TextView
-        android:id="@+id/plant_detail_attr_scientific_name"
+    <merge>
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_28"
-        android:layout_marginTop="@dimen/dp_4"
+        <TextView
 
-        android:text="Raphanus raphanistrum"
+            android:id="@+id/plant_detail_attr_scientific_name_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_28"
+            android:layout_marginTop="@dimen/dp_24"
 
-        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-        android:textColor="@color/colorOnSurface"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/plant_detail_attr_scientific_name_header"
-        tools:text="Raphanus raphanistrum" />
+            android:text="Scientific Name:"
+            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+            android:textColor="?colorPrimary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/plant_detail_section_region_chip_group" />
 
+        <TextView
+            android:id="@+id/plant_detail_attr_scientific_name"
 
-    <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_28"
+            android:layout_marginTop="@dimen/dp_4"
 
-        android:id="@+id/plant_detail_attr_genus_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/dp_28"
-        android:layout_marginTop="@dimen/dp_24"
+            android:text="@{bViewModel.bData.detail.scientificName}"
 
-        android:text="Genus:"
-        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
-        android:textColor="?colorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plant_detail_attr_scientific_name"
-        />
-
-    <TextView
-        android:id="@+id/plant_detail_attr_genus"
-
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_28"
-        android:layout_marginTop="@dimen/dp_4"
-
-        android:text="Raphanus"
-
-        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-        android:textColor="@color/colorOnSurface"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/plant_detail_attr_genus_header"
-        tools:text="Raphanus" />
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            android:textColor="@color/colorOnSurface"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/plant_detail_attr_scientific_name_header"
+            tools:text="Raphanus raphanistrum" />
 
 
-    <TextView
+        <TextView
 
-        android:id="@+id/plant_detail_attr_family_header"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="@dimen/dp_28"
-        android:layout_marginTop="@dimen/dp_24"
+            android:id="@+id/plant_detail_attr_genus_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_28"
+            android:layout_marginTop="@dimen/dp_24"
 
-        android:text="Family:"
-        android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
-        android:textColor="?colorPrimary"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/plant_detail_attr_genus"
-        />
+            android:text="Genus:"
+            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+            android:textColor="?colorPrimary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/plant_detail_attr_scientific_name" />
 
-    <TextView
-        android:id="@+id/plant_detail_attr_family"
+        <TextView
+            android:id="@+id/plant_detail_attr_genus"
 
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/dp_28"
-        android:layout_marginTop="@dimen/dp_4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_28"
+            android:layout_marginTop="@dimen/dp_4"
 
-        android:text="Brassicaceae"
+            android:text="@{bViewModel.bData.detail.genusName}"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            android:textColor="@color/colorOnSurface"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/plant_detail_attr_genus_header"
+            tools:text="Raphanus" />
 
-        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
-        android:textColor="@color/colorOnSurface"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/plant_detail_attr_family_header"
-        tools:text="Brassicaceae" />
 
-</merge>
+        <TextView
+
+            android:id="@+id/plant_detail_attr_family_header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="@dimen/dp_28"
+            android:layout_marginTop="@dimen/dp_24"
+
+            android:text="Family:"
+            android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
+            android:textColor="?colorPrimary"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/plant_detail_attr_genus" />
+
+        <TextView
+            android:id="@+id/plant_detail_attr_family"
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/dp_28"
+            android:layout_marginTop="@dimen/dp_4"
+            android:text="@{bViewModel.bData.detail.familyName}"
+            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
+            android:textColor="@color/colorOnSurface"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/plant_detail_attr_family_header"
+            tools:text="Brassicaceae" />
+
+    </merge>
+</layout>
