--- a/app/src/main/res/layout/nav_plants_recent_item.xml
+++ b/app/src/main/res/layout/nav_plants_recent_item.xml
@@ -1,13 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="bModel"
+            type="com.taru.data.local.db.plant.PlantRecentSearchEntity" />
+
+        <variable
+            name="bOnClick"
+            type="View.OnClickListener" />
+
+    </data>
+<androidx.constraintlayout.widget.ConstraintLayout
     android:layout_width="@dimen/dp_80"
     android:layout_marginEnd="@dimen/dp_12"
     android:foreground="@drawable/dr_ripple_round_18"
     android:clickable="true"
     android:focusable="true"
+
+    android:onClick="@{bOnClick::onClick}"
 
     android:layout_height="wrap_content">
 
@@ -34,6 +50,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="16:14"
         android:id="@+id/nav_plants_recent_item_image"
+        app:bindCoilSrc="@{bModel.imageUrl}"
+
 
         app:shapeAppearanceOverlay="@style/Jl.App.ShapeAppearanceOverlay.18"
         tools:src="@drawable/pic_tool_category"
@@ -45,7 +63,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:text="Radish"
-        android:text="Radish"
+        android:text="@{bModel.q}"
         android:gravity="center_horizontal"
         android:textColor="@color/colorOnSurface"
         android:textAppearance="@style/TextAppearance.Material3.BodySmall"
@@ -57,3 +75,4 @@
         app:layout_constraintBottom_toBottomOf="parent"
         />
 </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
