--- a/app/src/main/res/layout/nav_about_fragment.xml
+++ b/app/src/main/res/layout/nav_about_fragment.xml
@@ -5,55 +5,163 @@
 
     <data>
 
+        <import type="com.taru.R"/>
         <import type="android.view.View" />
+
         <variable
             name="bViewModel"
             type="com.taru.ui.pages.nav.about.NavAboutViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:fitsSystemWindows="true"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:background="?colorSurface">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:elevation="@dimen/dp_0">
+
             <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:title="Taru"
-                android:id="@+id/topAppBar"
-                app:titleCentered="true"
-                app:logo="@drawable/ic_logo_taru"
-                app:menu="@menu/menu_app"/>
+                app:logo="@drawable/ic_logo_taru">
+
+                <Button
+
+                    android:id="@+id/button_github"
+                    style="@style/Widget.Material3.Button.ElevatedButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/dp_48"
+                    android:layout_gravity="center_vertical|end"
+                    android:backgroundTint="@color/black"
+                    android:drawableStart="@drawable/ic_github"
+                    android:text="Github"
+                    android:textAppearance="@style/Typo.Jl.Button"
+                    android:textColor="@color/white" />
+            </com.google.android.material.appbar.MaterialToolbar>
         </com.google.android.material.appbar.AppBarLayout>
-        <androidx.constraintlayout.widget.ConstraintLayout
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <View android:layout_height="0dp"
-        android:layout_width="0dp"
-        app:layout_constraintHeight_percent="0.6"
-        app:layout_constraintWidth_percent="0.8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/taru_green_30"/>
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/dp_200"
+                android:clipToPadding="false">
 
-    <View android:layout_height="match_parent"
-        android:layout_width="0dp"
-        app:layout_constraintWidth_percent="0.7"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/taru_green_10"/>
+                <TextView
+                    android:id="@+id/nav_about_fragment_title"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Taru"
+                    android:textAppearance="@style/Typo.Jl.Headline.Large"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"/>
+                <TextView
+                    android:id="@+id/nav_about_fragment_subtitle"
+                    android:layout_width="match_parent"
+                    android:layout_marginHorizontal="@dimen/dp_32"
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                    android:layout_marginTop="@dimen/dp_8"
+                    android:layout_height="wrap_content"
+                    android:text='The word "Taru" is derived from Hindi and means "tree" in English.'
+                    android:textAppearance="@style/Typo.Jl.BodyLarge"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_about_fragment_title"
+                    />
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/nav_about_fragment_image"
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    app:bindCoilSrc="@{R.drawable.rectangle_16808}"
+                    android:layout_marginHorizontal="@dimen/dp_24"
+                    app:layout_constraintDimensionRatio="3:4"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_about_fragment_subtitle"
+                    app:shapeAppearanceOverlay="@style/Jl.App.ShapeAppearanceOverlay.24"
+                    tools:src="@drawable/pic_tool_category" />
+
+                <TextView
+                    android:id="@+id/nav_about_fragment_detail1"
+                    android:layout_width="match_parent"
+                    android:layout_marginTop="@dimen/dp_8"
+                    android:layout_marginHorizontal="@dimen/dp_32"
+                    android:layout_height="wrap_content"
+                    android:text="This is an open-source project built with the help of third-party APIs."
+                    android:textAppearance="@style/Typo.Jl.BodyLarge"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_about_fragment_image"/>
+
+                <TextView
+                    android:id="@+id/nav_about_fragment_detail2"
+                    android:layout_marginTop="@dimen/dp_8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dp_32"
+                    android:text="You can find the implementation on github."
+                    android:textAppearance="@style/Typo.Jl.BodyLarge"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_about_fragment_detail1"/>
+
+
+                <View
+                    android:id="@+id/nav_about_fragment_line"
+                    android:layout_marginHorizontal="@dimen/dp_56"
+                    android:layout_width="match_parent"
+                    android:layout_marginVertical="@dimen/dp_20"
+                    android:layout_height="1dp"
+                    android:background="@color/color_on_surface_38"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_about_fragment_detail2"
+                    app:layout_constraintWidth_percent="0.7"
+                    app:layout_constraintBottom_toTopOf="@id/nav_about_fragment_detail3"/>
+
+
+                <TextView
+                    android:id="@+id/nav_about_fragment_detail3"
+                    android:layout_marginTop="@dimen/dp_8"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginHorizontal="@dimen/dp_32"
+                    android:text="Help me make projects that are free and open source for everyone. Check out and support projects on JunkieLabs.in. Let others know about this."
+                    android:textAppearance="@style/Typo.Jl.BodyLarge"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/nav_about_fragment_line"/>
+
+                <Button
+                    android:id="@+id/button_junkiesLabs"
+
+                    style="@style/Widget.Material3.Button.ElevatedButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_60"
+                    android:layout_marginTop="@dimen/dp_20"
+                    android:textColor="@color/white"
+                    app:layout_constraintTop_toBottomOf="@id/nav_about_fragment_detail3"
+
+                    android:textAppearance="@style/Typo.Jl.Button.Junkie"
+                    android:backgroundTint="#DE1D34"
+                    android:text="Visit Junkielabs" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
