working on category

--- a/app/src/main/res/layout/plants_filtered_fragment.xml
+++ b/app/src/main/res/layout/plants_filtered_fragment.xml
@@ -9,7 +9,7 @@
 
         <variable
             name="bViewModel"
-            type="com.taru.ui.pages.plants.search.SearchViewModel" />
+            type="com.taru.ui.pages.plants.filtered.PlantsFilteredViewModel" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -24,20 +24,14 @@
             android:layout_height="wrap_content"
             android:fitsSystemWindows="true"
             app:elevation="@dimen/dp_0">
-            <com.google.android.material.search.SearchBar
-                android:id="@+id/search_bar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
 
-                app:navigationIcon="@drawable/round_keyboard_arrow_left_24"
-                android:hint="search plant .." />
-            <!--<com.google.android.material.appbar.MaterialToolbar
+            <com.google.android.material.appbar.MaterialToolbar
                 android:id="@+id/topAppBar"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:menu="@menu/menu_app"
-                app:title="Taru"
-                app:titleCentered="true" />-->
+                app:title="Filter name"
+                app:titleCentered="true" />
 
 
         </com.google.android.material.appbar.AppBarLayout>
@@ -96,31 +90,6 @@
 
         <!--</androidx.core.widget.NestedScrollView>-->
 
-        <com.google.android.material.search.SearchView
-            android:id="@+id/search_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:minHeight="@dimen/dp_200"
-            android:hint="plant search"
-            app:layout_anchor="@id/search_bar">
-            <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/search_view_recyclerview"
-                android:layout_width="match_parent"
-
-                android:paddingBottom="@dimen/dp_200"
-                android:layout_height="match_parent"
-
-
-                android:paddingStart="@dimen/dp_24"
-                android:paddingEnd="@dimen/dp_24"
-                android:clipToPadding="false"
-                tools:listitem="@layout/search_plants_item"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-
-                android:orientation="vertical"/>
-        </com.google.android.material.search.SearchView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 </layout>
