--- a/app/src/main/res/layout/home_category_item.xml
+++ b/app/src/main/res/layout/home_category_item.xml
@@ -1,57 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="@dimen/dp_56"
-    android:layout_marginEnd="@dimen/dp_12"
-    android:foreground="@drawable/dr_ripple_round_18"
-    android:clickable="true"
-    android:focusable="true"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    android:layout_height="wrap_content">
+    <data>
 
-<!--    android:translationZ="@dimen/dp_2"
--->
-    <View android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:id="@+id/home_category_item_image_area"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
+        <import type="android.view.View" />
 
+        <variable
+            name="bModel"
+            type="com.taru.data.local.assets.entities.ModelCategory" />
 
-        android:background="@drawable/dr_rect_round_18"/>
-<!--            android:translationZ="@dimen/dp_2"
--->
-    <com.google.android.material.imageview.ShapeableImageView
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintDimensionRatio="1:1"
-        android:id="@+id/home_category_item_image"
+        <variable
+            name="bOnClick"
+            type="View.OnClickListener" />
 
-        app:shapeAppearanceOverlay="@style/Jl.App.ShapeAppearanceOverlay.circle"
-        tools:src="@drawable/pic_tool_category"
+    </data>
 
-
-        android:layout_margin="@dimen/dp_4"/>
-
-    <TextView
-        android:layout_width="match_parent"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="@dimen/dp_56"
         android:layout_height="wrap_content"
-        tools:text="Radish"
-        android:text="Radish"
-        android:gravity="center_horizontal"
-        android:textColor="@color/colorOnSurface"
-        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
-        android:layout_marginTop="@dimen/dp_4"
-        app:layout_constraintTop_toBottomOf="@+id/home_category_item_image_area"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginEnd="@dimen/dp_12"
+        android:clickable="true"
+        android:focusable="true"
+
+        android:foreground="@drawable/dr_ripple_round_18">
+
+        <!--    android:translationZ="@dimen/dp_2"
+        -->
+        <View
+            android:id="@+id/home_category_item_image_area"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="@drawable/dr_rect_round_18"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+
+            app:layout_constraintTop_toTopOf="parent" />
+        <!--            android:translationZ="@dimen/dp_2"
+        -->
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/home_category_item_image"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_margin="@dimen/dp_4"
+            app:bindCoilSrc="@{bModel.imageSrc}"
+            android:background="@drawable/dr_circle_on_surface"
+            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+
+            app:layout_constraintTop_toTopOf="parent"
+            app:shapeAppearanceOverlay="@style/Jl.App.ShapeAppearanceOverlay.circle"
+
+
+            tools:src="@drawable/pic_tool_category" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/dp_4"
+            android:gravity="center_horizontal"
+            android:text="@{bModel.title}"
+            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
+            android:textColor="@color/colorOnSurface"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/home_category_item_image_area"
+            tools:text="Radish" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</layout>
