--- a/app/src/main/res/layout/home_category_item.xml
+++ b/app/src/main/res/layout/home_category_item.xml
@@ -45,6 +45,7 @@
             android:id="@+id/home_category_item_image"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:scaleType="centerCrop"
             android:layout_margin="@dimen/dp_4"
             app:bindCoilSrc="@{bModel.imageSrc}"
             android:background="@drawable/dr_circle_on_surface"
