--- a/app/src/main/res/layout/labs_main_fragment.xml
+++ b/app/src/main/res/layout/labs_main_fragment.xml
@@ -94,7 +94,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_6"
                 android:onClick="@{() -> viewModel.clearPlants()}"
-                android:text="Clear" />
+                android:text="Clear Plants" />
+
+            <Button
+                android:id="@+id/labs_main_fragment_clear_weather_btn"
+                style="@style/Widget.Jl.App.Button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dp_6"
+                android:onClick="@{() -> viewModel.clearWeather()}"
+                android:text="Clear Weather" />
             <Button
                 android:id="@+id/labs_main_fragment_recent_searches_btn"
                 style="@style/Widget.Jl.App.Button"
